# bulk

./: .gitignore  .travis.yml  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  bulk.cpp  bulk.h  bulk_interface.h  bulk_proxy.cpp  bulk_proxy.h  console_output.cpp  console_output.h  file_output.cpp  file_output.h  handler.cpp  handler.h  output_helper.cpp  output_helper.h  output_item_interface.h
tests/: CMakeLists.txt  test_bulk.cpp
